# FashionRAG

./: .env.example  .gitignore  LICENSE  README.md  ingest.py  main.py  pyproject.toml  qdrant_search.py  qdrant_upload.py
eval/: ablation.py  metrics.py  test_queries.json
fashionrag/: clip.py  embeddings.py  filters.py  hybrid.py  keyword.py  products.py  qdrant.py  search.py  settings.py
scripts/: app.py  hybrid_search.py  ingest.py  keyword_search.py  local_search.py  qdrant_search.py  qdrant_upload.py  search.py
tests/: test_clip.py  test_filters.py  test_hybrid.py  test_keyword.py  test_metrics.py  test_qdrant.py
