[project]
name = "fashionrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.14.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "torch>=2.0.0",
    "tqdm>=4.66.0",
    "transformers>=4.35.0",
]
