[project]
name = "fashionrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.14.0",
    "dotenv>=0.9.9",
    "gradio>=4.0.0",
    "matplotlib>=3.10.9",
    "nltk>=3.8.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "qdrant-client>=1.7.0",
    "rank-bm25>=0.2.2",
    "torch>=2.0.0",
    "tqdm>=4.66.0",
    "transformers>=4.35.0",
]
